Fixes map positioning bug on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,6 @@ body {
     }
 
     #map {
-        top: calc(var(--navbar-height) + 1%) !important;
+        top: calc(var(--navbar-height) - 1%) !important;
     }
 }
